--- a/views/attack.erb
+++ b/views/attack.erb
@@ -2,6 +2,7 @@
   <div style="text-align: center; font-family: Arial; background: #e1e1e1; padding: 1em 4em 1em 4em; margin-top: 3em; border-radius: 20px;">
     <h2 class="hit-confirm"><%= @game.player_1.name %> <span style="color: red; margin: 0 2em 0 2em;">Attacked</span> <%= @game.player_2.name %></h2>
     <p class="hit"><%= @game.player_2.name %>: <%= @game.player_2.hit_points %>HP</p>
+      <p><%= @game.current_turn.name %>'s turn</p>
     <iframe src="https://giphy.com/embed/3o8doYRSVzXu3l000g" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/attack-donald-trump-eagle-3o8doYRSVzXu3l000g"></a></p>
   <div>
 <div>
