--- a/views/play.erb
+++ b/views/play.erb
@@ -5,7 +5,7 @@
     <p><%= @game.current_turn.name %>'s turn</p>
   </div>
   <div style="margin-top: 2em;">
-    <form action="/attack">
+  <form action="/attack" method="post">
     <input type="submit" value="Attack">
   </form>
   </div>
